--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -1,3 +1,27 @@
 body{
-
+    background-color: crimson;
+    color: whitesmoke;
 }
+
+nav {
+   float: left;
+    background-color: ThreeDDarkShadow;
+    padding: 5px;
+    height: 100vh;
+    border-radius: 15px;
+    margin-right: 0;
+}
+    li a {
+    background-color: black;
+    text-decoration: none;
+    padding: 1.5em 1.5em;
+    text-transform: uppercase;
+    display: block;
+    border-radius: 15px;
+    margin: 5px;
+    color: whitesmoke;
+}
+   li a:hover {
+    transform: scale(1.5);
+
+   }
