--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -1,22 +1,28 @@
 body{
-    background-color: crimson;
+    background-color: darkred;
     color: whitesmoke;
 }
-
+h1 {
+    text-shadow: white;
+    text-shadow: 2px 2px 4px #000000;
+    font-size: 40px;
+    
+}
 nav {
    float: left;
-    background-color: ThreeDDarkShadow;
+    background-color: ghostwhite;
     padding: 5px;
-    height: 100vh;
+    height: 315px;
     border-radius: 15px;
     margin-right: 0;
 }
-    li a {
+   li a {
     background-color: black;
     text-decoration: none;
     padding: 1.5em 1.5em;
     text-transform: uppercase;
     display: block;
+    
     border-radius: 15px;
     margin: 5px;
     color: whitesmoke;
@@ -25,3 +31,26 @@ nav {
     transform: scale(1.5);
 
    }
+  #info{
+      background-color:black;
+      box-shadow:0 4px 8px rgba(0,0,0,0.2);
+      border:5px solid white;
+      margin:25px;
+      display:block;
+      width:1250px;
+      padding:15px;  
+  }
+#image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    height: 500px;
+}
+img{
+    width: 100%;
+    height: 70%;
+    border-radius: 15px;
+    box-shadow:0 4px 12px black;
+}
+
