--- a/stylesheetabout.css
+++ b/stylesheetabout.css
@@ -26,8 +26,55 @@ li a {
     border-radius: 15px;
     margin: 5px;
     color: whitesmoke;
+    text-align: center;
+    font-size: 16px;
 }
 
     li a:hover {
         transform: scale(1.2);
     }
+
+#info {
+    background-color: black;
+    box-shadow: 4px 4px 4px #000000;
+    border: 5px solid white;
+    margin: 25px;
+    display: block;
+    width: 1225px;
+    padding: 15px;
+}
+
+#image {
+    background-color: white;
+    display: inline-block;
+    float: left;
+    width: 15%;
+    height: 350px;
+    margin: 25px;
+    border-radius: 15px;
+}
+img {
+    width: 90%;
+    height: 90%;
+    background-color: none;
+    background-position: center;
+    padding:  5% 5% 5% 5%;
+}
+
+#image2 {
+    background-color: white;
+    display: inline-block;
+    float: initial right;
+    width: 25%;
+    height: 350px;
+    margin: 25px;
+    border-radius: 25px;
+}
+#img2 {
+    width: 90%;
+    height: 90%;
+    background-color: none;
+    background-position: center;
+    padding: 5% 5% 5% 5%;
+}
+}
