--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -27,6 +27,7 @@ li a {
     border-radius: 15px;
     margin: 5px;
     color: whitesmoke;
+    font-size: 16px;
 }
    li a:hover {
     transform: scale(1.2);
@@ -34,12 +35,13 @@ li a {
    }
 #info {
     background-color: black;
-    box-shadow: 4px 4px 4px #000000;
+    box-shadow: 12px 12px 12px #000000;
     border: 5px solid white;
     margin: 25px;
     display: block;
-    width: 1250px;
+    width: 1220px;
     padding: 15px;
+    border-radius: 15px;
 }
 #image {
     display: block;
