--- a/stylesheetabout.css
+++ b/stylesheetabout.css
@@ -36,45 +36,40 @@ li a {
 
 #info {
     background-color: black;
-    box-shadow: 4px 4px 4px #000000;
+    box-shadow: 12px 12px 12px #000000;
     border: 5px solid white;
     margin: 25px;
     display: block;
     width: 1225px;
     padding: 15px;
+    border-radius: 15px;
+    
 }
 
 #image {
-    background-color: white;
-    display: inline-block;
-    float: left;
-    width: 15%;
-    height: 350px;
-    margin: 25px;
-    border-radius: 15px;
+    display: block;
+    float: right;
+    width: 40%;
+    height: 500px;
 }
 img {
-    width: 90%;
-    height: 90%;
-    background-color: none;
-    background-position: center;
-    padding:  5% 5% 5% 5%;
+    width: 60%;
+    height: 70%;
+    border-radius: 15px;
+    box-shadow: 12px 12px 12px black;
+    background-color: white;
 }
 
 #image2 {
-    background-color: white;
-    display: inline-block;
-    float: initial right;
-    width: 25%;
-    height: 350px;
-    margin: 25px;
-    border-radius: 25px;
+    display: block;
+    float: right;
+    width: 40%;
+    height: 500px;
 }
 #img2 {
-    width: 90%;
-    height: 90%;
-    background-color: none;
-    background-position: center;
-    padding: 5% 5% 5% 5%;
-}
+    width: 60%;
+    height: 70%;
+    border-radius: 15px;
+    box-shadow: 12px 12px 12px black;
+    background-color: white;
 }
