--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -6,9 +6,14 @@ h1 {
     text-shadow: white;
     text-shadow: 2px 2px 4px #000000;
     font-size: 50px;
+    text-align: center;
     
 }
-nav {
+h2{
+    text-align: center;
+    
+}
+ul {
     float: left;
     background-color: ghostwhite;
     padding: 5px;
@@ -16,6 +21,7 @@ nav {
     border-radius: 15px;
     margin-right: 0;
     box-shadow: 4px 4px 4px #000000;
+    width: 180px;
 }
 li a {
     background-color: black;
@@ -28,6 +34,7 @@ li a {
     margin: 5px;
     color: whitesmoke;
     font-size: 16px;
+    text-align: center;
 }
    li a:hover {
     transform: scale(1.2);
