--- a/stylesheetabout.css
+++ b/stylesheetabout.css
@@ -6,12 +6,13 @@ h1 {
     text-shadow: white;
     text-shadow: 2px 2px 4px #000000;
     font-size: 40px;
+    text-align:center;
 }
-nav {
+ul {
     float: left;
     background-color: ghostwhite;
     padding: 5px;
-    height: 315px;
+    height: 400px;
     border-radius: 15px;
     margin-right: 0;
     box-shadow: 4px 4px 4px #000000;
